package com.bnc.cirrostream.metadata.model;

import java.util.Date;

public class CrrioSysSource {
    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_SOURCE.ID
     *
     * @mbggenerated
     */
    private String id;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_SOURCE.NAME
     *
     * @mbggenerated
     */
    private String name;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_SOURCE.TYPE
     *
     * @mbggenerated
     */
    private String type;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_SOURCE.CREATE_USER
     *
     * @mbggenerated
     */
    private String createUser;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_SOURCE.CREATE_TIME
     *
     * @mbggenerated
     */
    private Date createTime;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_SOURCE.UPDATE_TIME
     *
     * @mbggenerated
     */
    private Date updateTime;

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_SOURCE.ID
     *
     * @return the value of CRRIO_SYS_SOURCE.ID
     *
     * @mbggenerated
     */
    public String getId() {
        return id;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_SOURCE.ID
     *
     * @param id the value for CRRIO_SYS_SOURCE.ID
     *
     * @mbggenerated
     */
    public void setId(String id) {
        this.id = id == null ? null : id.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_SOURCE.NAME
     *
     * @return the value of CRRIO_SYS_SOURCE.NAME
     *
     * @mbggenerated
     */
    public String getName() {
        return name;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_SOURCE.NAME
     *
     * @param name the value for CRRIO_SYS_SOURCE.NAME
     *
     * @mbggenerated
     */
    public void setName(String name) {
        this.name = name == null ? null : name.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_SOURCE.TYPE
     *
     * @return the value of CRRIO_SYS_SOURCE.TYPE
     *
     * @mbggenerated
     */
    public String getType() {
        return type;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_SOURCE.TYPE
     *
     * @param type the value for CRRIO_SYS_SOURCE.TYPE
     *
     * @mbggenerated
     */
    public void setType(String type) {
        this.type = type == null ? null : type.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_SOURCE.CREATE_USER
     *
     * @return the value of CRRIO_SYS_SOURCE.CREATE_USER
     *
     * @mbggenerated
     */
    public String getCreateUser() {
        return createUser;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_SOURCE.CREATE_USER
     *
     * @param createUser the value for CRRIO_SYS_SOURCE.CREATE_USER
     *
     * @mbggenerated
     */
    public void setCreateUser(String createUser) {
        this.createUser = createUser == null ? null : createUser.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_SOURCE.CREATE_TIME
     *
     * @return the value of CRRIO_SYS_SOURCE.CREATE_TIME
     *
     * @mbggenerated
     */
    public Date getCreateTime() {
        return createTime;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_SOURCE.CREATE_TIME
     *
     * @param createTime the value for CRRIO_SYS_SOURCE.CREATE_TIME
     *
     * @mbggenerated
     */
    public void setCreateTime(Date createTime) {
        this.createTime = createTime;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_SOURCE.UPDATE_TIME
     *
     * @return the value of CRRIO_SYS_SOURCE.UPDATE_TIME
     *
     * @mbggenerated
     */
    public Date getUpdateTime() {
        return updateTime;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_SOURCE.UPDATE_TIME
     *
     * @param updateTime the value for CRRIO_SYS_SOURCE.UPDATE_TIME
     *
     * @mbggenerated
     */
    public void setUpdateTime(Date updateTime) {
        this.updateTime = updateTime;
    }
}