package com.bnc.cirrostream.metadata.model;

public class CrrioSysTabColumns {
    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_TAB_COLUMNS.OBJ_ID
     *
     * @mbggenerated
     */
    private String objId;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_TAB_COLUMNS.OBJ_TYPE
     *
     * @mbggenerated
     */
    private String objType;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_TAB_COLUMNS.COLUMN_NAME
     *
     * @mbggenerated
     */
    private String columnName;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_TAB_COLUMNS.DATA_TYPE
     *
     * @mbggenerated
     */
    private String dataType;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_TAB_COLUMNS.POSITION
     *
     * @mbggenerated
     */
    private Integer position;

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_TAB_COLUMNS.OBJ_ID
     *
     * @return the value of CRRIO_SYS_TAB_COLUMNS.OBJ_ID
     *
     * @mbggenerated
     */
    public String getObjId() {
        return objId;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_TAB_COLUMNS.OBJ_ID
     *
     * @param objId the value for CRRIO_SYS_TAB_COLUMNS.OBJ_ID
     *
     * @mbggenerated
     */
    public void setObjId(String objId) {
        this.objId = objId == null ? null : objId.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_TAB_COLUMNS.OBJ_TYPE
     *
     * @return the value of CRRIO_SYS_TAB_COLUMNS.OBJ_TYPE
     *
     * @mbggenerated
     */
    public String getObjType() {
        return objType;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_TAB_COLUMNS.OBJ_TYPE
     *
     * @param objType the value for CRRIO_SYS_TAB_COLUMNS.OBJ_TYPE
     *
     * @mbggenerated
     */
    public void setObjType(String objType) {
        this.objType = objType == null ? null : objType.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_TAB_COLUMNS.COLUMN_NAME
     *
     * @return the value of CRRIO_SYS_TAB_COLUMNS.COLUMN_NAME
     *
     * @mbggenerated
     */
    public String getColumnName() {
        return columnName;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_TAB_COLUMNS.COLUMN_NAME
     *
     * @param columnName the value for CRRIO_SYS_TAB_COLUMNS.COLUMN_NAME
     *
     * @mbggenerated
     */
    public void setColumnName(String columnName) {
        this.columnName = columnName == null ? null : columnName.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_TAB_COLUMNS.DATA_TYPE
     *
     * @return the value of CRRIO_SYS_TAB_COLUMNS.DATA_TYPE
     *
     * @mbggenerated
     */
    public String getDataType() {
        return dataType;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_TAB_COLUMNS.DATA_TYPE
     *
     * @param dataType the value for CRRIO_SYS_TAB_COLUMNS.DATA_TYPE
     *
     * @mbggenerated
     */
    public void setDataType(String dataType) {
        this.dataType = dataType == null ? null : dataType.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_TAB_COLUMNS.POSITION
     *
     * @return the value of CRRIO_SYS_TAB_COLUMNS.POSITION
     *
     * @mbggenerated
     */
    public Integer getPosition() {
        return position;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_TAB_COLUMNS.POSITION
     *
     * @param position the value for CRRIO_SYS_TAB_COLUMNS.POSITION
     *
     * @mbggenerated
     */
    public void setPosition(Integer position) {
        this.position = position;
    }
}