package com.bnc.cirrostream.metadata.model;

public class CrrioSysTabProperties {
    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_TAB_PROPERTIES.OBJ_ID
     *
     * @mbggenerated
     */
    private String objId;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_TAB_PROPERTIES.OBJ_TYPE
     *
     * @mbggenerated
     */
    private String objType;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_TAB_PROPERTIES.PROPERTIES_NAME
     *
     * @mbggenerated
     */
    private String propertiesName;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_TAB_PROPERTIES.PROPERTIES_VALUE
     *
     * @mbggenerated
     */
    private String propertiesValue;

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_TAB_PROPERTIES.OBJ_ID
     *
     * @return the value of CRRIO_SYS_TAB_PROPERTIES.OBJ_ID
     *
     * @mbggenerated
     */
    public String getObjId() {
        return objId;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_TAB_PROPERTIES.OBJ_ID
     *
     * @param objId the value for CRRIO_SYS_TAB_PROPERTIES.OBJ_ID
     *
     * @mbggenerated
     */
    public void setObjId(String objId) {
        this.objId = objId == null ? null : objId.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_TAB_PROPERTIES.OBJ_TYPE
     *
     * @return the value of CRRIO_SYS_TAB_PROPERTIES.OBJ_TYPE
     *
     * @mbggenerated
     */
    public String getObjType() {
        return objType;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_TAB_PROPERTIES.OBJ_TYPE
     *
     * @param objType the value for CRRIO_SYS_TAB_PROPERTIES.OBJ_TYPE
     *
     * @mbggenerated
     */
    public void setObjType(String objType) {
        this.objType = objType == null ? null : objType.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_TAB_PROPERTIES.PROPERTIES_NAME
     *
     * @return the value of CRRIO_SYS_TAB_PROPERTIES.PROPERTIES_NAME
     *
     * @mbggenerated
     */
    public String getPropertiesName() {
        return propertiesName;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_TAB_PROPERTIES.PROPERTIES_NAME
     *
     * @param propertiesName the value for CRRIO_SYS_TAB_PROPERTIES.PROPERTIES_NAME
     *
     * @mbggenerated
     */
    public void setPropertiesName(String propertiesName) {
        this.propertiesName = propertiesName == null ? null : propertiesName.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_TAB_PROPERTIES.PROPERTIES_VALUE
     *
     * @return the value of CRRIO_SYS_TAB_PROPERTIES.PROPERTIES_VALUE
     *
     * @mbggenerated
     */
    public String getPropertiesValue() {
        return propertiesValue;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_TAB_PROPERTIES.PROPERTIES_VALUE
     *
     * @param propertiesValue the value for CRRIO_SYS_TAB_PROPERTIES.PROPERTIES_VALUE
     *
     * @mbggenerated
     */
    public void setPropertiesValue(String propertiesValue) {
        this.propertiesValue = propertiesValue == null ? null : propertiesValue.trim();
    }
}