package com.bnc.cirrostream.metadata.model;

import java.util.Date;

public class CrrioSysView {
    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_VIEW.ID
     *
     * @mbggenerated
     */
    private String id;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_VIEW.NAME
     *
     * @mbggenerated
     */
    private String name;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_VIEW.SQL
     *
     * @mbggenerated
     */
    private String sql;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_VIEW.CREATE_USER
     *
     * @mbggenerated
     */
    private String createUser;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_VIEW.CREATE_TIME
     *
     * @mbggenerated
     */
    private Date createTime;

    /**
     * This field was generated by MyBatis Generator.
     * This field corresponds to the database column CRRIO_SYS_VIEW.UPDATE_TIME
     *
     * @mbggenerated
     */
    private Date updateTime;

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_VIEW.ID
     *
     * @return the value of CRRIO_SYS_VIEW.ID
     *
     * @mbggenerated
     */
    public String getId() {
        return id;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_VIEW.ID
     *
     * @param id the value for CRRIO_SYS_VIEW.ID
     *
     * @mbggenerated
     */
    public void setId(String id) {
        this.id = id == null ? null : id.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_VIEW.NAME
     *
     * @return the value of CRRIO_SYS_VIEW.NAME
     *
     * @mbggenerated
     */
    public String getName() {
        return name;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_VIEW.NAME
     *
     * @param name the value for CRRIO_SYS_VIEW.NAME
     *
     * @mbggenerated
     */
    public void setName(String name) {
        this.name = name == null ? null : name.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_VIEW.SQL
     *
     * @return the value of CRRIO_SYS_VIEW.SQL
     *
     * @mbggenerated
     */
    public String getSql() {
        return sql;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_VIEW.SQL
     *
     * @param sql the value for CRRIO_SYS_VIEW.SQL
     *
     * @mbggenerated
     */
    public void setSql(String sql) {
        this.sql = sql == null ? null : sql.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_VIEW.CREATE_USER
     *
     * @return the value of CRRIO_SYS_VIEW.CREATE_USER
     *
     * @mbggenerated
     */
    public String getCreateUser() {
        return createUser;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_VIEW.CREATE_USER
     *
     * @param createUser the value for CRRIO_SYS_VIEW.CREATE_USER
     *
     * @mbggenerated
     */
    public void setCreateUser(String createUser) {
        this.createUser = createUser == null ? null : createUser.trim();
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_VIEW.CREATE_TIME
     *
     * @return the value of CRRIO_SYS_VIEW.CREATE_TIME
     *
     * @mbggenerated
     */
    public Date getCreateTime() {
        return createTime;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_VIEW.CREATE_TIME
     *
     * @param createTime the value for CRRIO_SYS_VIEW.CREATE_TIME
     *
     * @mbggenerated
     */
    public void setCreateTime(Date createTime) {
        this.createTime = createTime;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method returns the value of the database column CRRIO_SYS_VIEW.UPDATE_TIME
     *
     * @return the value of CRRIO_SYS_VIEW.UPDATE_TIME
     *
     * @mbggenerated
     */
    public Date getUpdateTime() {
        return updateTime;
    }

    /**
     * This method was generated by MyBatis Generator.
     * This method sets the value of the database column CRRIO_SYS_VIEW.UPDATE_TIME
     *
     * @param updateTime the value for CRRIO_SYS_VIEW.UPDATE_TIME
     *
     * @mbggenerated
     */
    public void setUpdateTime(Date updateTime) {
        this.updateTime = updateTime;
    }
}