package com.bnc.cirrostream.metadata.service;

/**
 * @author RockeyCui
 */
public interface MdSaveService {


    void save();

}
